--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <h1>チャット</h1>
   <dl id="chats"></dl>
 
-    <form id="nameform">
+    <form id="nameForm">
       <input id="userName" autocomplete="off" placeholder="表示名" /><button>参加</button>
     </form>
     <form id="form">
