--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1>夏期学校</h1>
+  <h1>響のオープンチャット</h1>
   <dl id="chats"></dl>
 
     <form id="nameForm">
-      <input id="userName" autocomplete="off" placeholder="グループ名" /><button>参加</button>
+      <input id="userName" autocomplete="off" placeholder="名前" /><button>参加</button>
     </form>
     <form id="form">
       <input id="msg" autocomplete="off" /> <button>送信</button>
