--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>響のオープンチャット</title>
+    <title>2021_Summer</title>
     <script src="/socket.io/socket.io.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1>響のオープンチャット</h1>
+  <h1>2021_Summer</h1>
   <dl id="chats"></dl>
 
     <form id="nameForm">
